k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domce-frontend
  namespace: domce-app
spec:
  selector:
    app: domce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
