k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domce-ingress
  namespace: domce-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: domce-frontend
            port:
              number: 80
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: domce-backend
            port:
              number: 4000
